[package]
name = "rust-practice"
version = "0.1.0"
authors = ["zhangpanweb <zhangpanweb@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.18"
piston_window = "0.74.0"
time = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.3"
rustc-serialize = "0.3"
chrono = { version = "0.2", features = ["rustc-serialize"] }
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }
